# NDK_SDL_MediaPlayer

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioComponent.c  AudioComponent.h  LOG.h  PacketQueue.c  PacketQueue.h  PacketReader.c  PacketReader.h  Player.c  Player.h  SDL_android.c  SDL_android.h  VideoComponent.c  VideoComponent.h  VideoPicture.h  VideoState.c  VideoState.h  main.c
app/src/main/cpp/FFmpeg/include/libavcodec/: avcodec.h
app/src/main/cpp/FFmpeg/include/libavdevice/: avdevice.h
app/src/main/cpp/FFmpeg/include/libavfilter/: avfilter.h  buffersrc.h
app/src/main/cpp/FFmpeg/include/libavformat/: avformat.h  avio.h
app/src/main/cpp/FFmpeg/include/libavutil/: avstring.h  avutil.h  cpu.h  frame.h  log.h  opt.h  pixdesc.h  pixfmt.h  samplefmt.h  threadmessage.h
app/src/main/cpp/FFmpeg/include/libswscale/: swscale.h
app/src/main/cpp/dynapi/: SDL_dynapi.c  SDL_dynapi_procs.h
app/src/main/cpp/include/: SDL.h  SDL_assert.h  SDL_audio.h  SDL_config.h.in  SDL_config_android.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_mouse.h  SDL_mutex.h  SDL_opengl.h  SDL_opengles.h  SDL_opengles2.h  SDL_pixels.h  SDL_platform.h  SDL_render.h  SDL_rwops.h  SDL_shape.h  SDL_stdinc.h  SDL_surface.h  SDL_syswm.h  SDL_test_assert.h  SDL_test_compare.h  SDL_test_crc32.h  SDL_test_harness.h  SDL_version.h  SDL_video.h
app/src/main/cpp/include/sdlmain/: SDL.c  SDL_assert.c  SDL_error.c  SDL_error_c.h  SDL_hints.c  SDL_internal.h  SDL_log.c
app/src/main/java/xwc/media/android/: PlayActivity.java
app/src/main/res/values/: styles.xml
app/src/main/winLibs/x64/: SDL2.lib  SDL2main.lib
app/src/main/winLibs/x86/: SDL2.lib  SDL2main.lib
